# axum-api-template

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 20240101000000_initial.sql
src/: main.rs
src/api/: docs.rs  error.rs  mod.rs  routes.rs
src/api/handlers/: auth.rs  health.rs  mod.rs  users.rs
src/api/middleware/: auth.rs  mod.rs
src/common/: jwt.rs  mod.rs  password.rs  validation.rs
src/config/: app.rs  database.rs  mod.rs
src/domain/: errors.rs  mod.rs
src/domain/models/: mod.rs  user.rs
src/domain/services/: auth_service.rs  mod.rs  user_service.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: mod.rs  user_repo.rs
